# Integrated_kernel_module

./: Makefile  README.md  inline_hook_frame.h  lsdriver.c  wxshadow_bp.c  wxshadow_core.c  wxshadow_deps.c  wxshadow_handlers.c  wxshadow_hook_types.h  wxshadow_internal.h  wxshadow_pgtable.c
lsdriver/: export_fun.h  io_struct.h  wxshadow.h  wxshadow_bp.c  wxshadow_core.c  wxshadow_deps.c  wxshadow_handlers.c  wxshadow_internal.h  wxshadow_pgtable.c
rfrida_zygisk/: AGENT_CHANGES.md  README.md  build.sh
rfrida_zygisk/module/src/main/cpp/: CMakeLists.txt  custom_loader.cpp  custom_loader.h  main.cpp
skills/: deploy-android-toolkit.md
